Fix placeholder alignment on firefox

--- a/packages/react/src/components/dropdown/combobox/Combobox.module.scss
+++ b/packages/react/src/components/dropdown/combobox/Combobox.module.scss
@@ -68,7 +68,7 @@
 
   &::placeholder {
     color: var(--placeholder-color);
-    line-height: normal;
+    opacity: 1;
   }
 
   &:disabled::placeholder {
